# groundtruth-kb

./: .dockerignore  .draft-adr-obsolete-reference-purge-obligation.md  .draft-dcl-assertions.json  .draft-dcl-obsolete-reference-purge-pairing.md  .draft-dcl-pauth-included-wids-restrictive.md  .draft-dcl-purge-assertions.json  .draft-delib-may29-wi4774-wi4745-closure.md  .draft-delib-wi3510-included-wids-restrictive.md  .draft-delib-wi4755-closure.md  .draft-delib-wi4771-closure.md  .draft-revised-wi4649-004.md  .draft-verdict-gtkb-rationale-003.md  .driveignore  .editorconfig  .env.example  .env.integration.example  .gitattributes  .gitignore  .temp_go_3222_seeded.md  .temp_go_3223_seeded.md  .temp_go_3224_seeded.md  .temp_go_reconcile_023.md  .temp_go_skill_catalog_002.md  .temp_go_storm_watchdog_002.md  .temp_verdict_attribution_008.md  .temp_verdict_body_gtkb_reconcile.md  .temp_verdict_body_perrole.md  .temp_verdict_body_reconcile.md  .temp_verdict_consolidate_008.md  .temp_verdict_dashboard_006.md  .temp_verdict_foreign_guard_004.md  .temp_verdict_sweep_008.md  .temp_verdict_wi3306_006.md  .temp_verdict_wi4773_006.md  .temp_verified_backlog_008.md  .temp_verified_body_gtkb_auto_retire.txt  .temp_verified_bridge_verify_010.md  .temp_verified_cross_harness_006.md  .temp_verified_lifecycle_005.md  .tmp-backlog.py  (+57 more)
.antigravity/: README.md  config.toml
.api-harness/: routing.toml
.claude/: settings.json
.codex/: config.toml  hooks.json
.cursor/: hooks.json
.githooks/: pre-commit  pre-commit-ps1-parse.ps1  pre-push  setup-hooks.sh
.github/: dependabot.yml  pull_request_template.md
.groundtruth/: por-16d-phase1-snapshot.json  por-16d-phase2-classification.json  por-16d-phase2-snapshot.json
.gtkb/: directive-registry.json
.gtkb-state/: delib-s414-document-author-provenance-pauth.md  generate-family-1-packets.py  generate-family-2-packets.py  generate-family-3-packets.py  generate-family-4-packets-and-insert.py
.ollama/: routing.toml
admin/: .eslintrc.json  package-lock.json  package.json
applications/: .gitignore  registry.toml
branding/: color-palette-worksheet.html
bridge/: .draft-gtkb-reconcile-included-work-item-ids-semantics-017-body.md  ARCHITECTURE-ADVISORY-REPORT-2026-06-09-19-03-arch-audit-findings-001.md  INDEX.md  active-workspace-declaration-architecture-2026-04-29-001.md  active-workspace-declaration-architecture-2026-04-29-002.md  active-workspace-declaration-architecture-2026-04-29-003.md  active-workspace-declaration-architecture-2026-04-29-004.md  active-workspace-declaration-architecture-2026-04-29-005.md  active-workspace-declaration-architecture-2026-04-29-006.md  active-workspace-declaration-slice-1-001.md  active-workspace-declaration-slice-1-002.md  active-workspace-declaration-slice-1-003.md  active-workspace-declaration-slice-1-004.md  active-workspace-declaration-slice-1-005.md  active-workspace-declaration-slice-1-006.md  active-workspace-declaration-slice-1-007.md  active-workspace-declaration-slice-1-008.md  active-workspace-declaration-slice-1-009.md  active-workspace-declaration-slice-1-010.md  agent-disposition-protocol-enforcement-umbrella-001.md  agent-disposition-protocol-enforcement-umbrella-002.md  agent-disposition-protocol-enforcement-umbrella-003.md  agent-disposition-protocol-enforcement-umbrella-004.md  agent-disposition-protocol-enforcement-umbrella-005.md  agent-disposition-protocol-enforcement-umbrella-006.md  agent-disposition-wi4588-protected-mutation-guard-slice1-001.md  agent-disposition-wi4588-protected-mutation-guard-slice1-002.md  agent-disposition-wi4588-protected-mutation-guard-slice1-003.md  agent-disposition-wi4588-protected-mutation-guard-slice1-004.md  agent-disposition-wi4589-external-mutation-gate-slice1-001.md  agent-disposition-wi4589-external-mutation-gate-slice1-002.md  agent-disposition-wi4589-external-mutation-gate-slice1-003.md  agent-disposition-wi4589-external-mutation-gate-slice1-004.md  agent-disposition-wi4589-external-mutation-gate-slice1-005.md  agent-disposition-wi4589-external-mutation-gate-slice1-006.md  agent-disposition-wi4590-post-action-receipts-slice1-001.md  agent-disposition-wi4590-post-action-receipts-slice1-002.md  agent-disposition-wi4590-post-action-receipts-slice1-003.md  agent-disposition-wi4590-post-action-receipts-slice1-004.md  agent-disposition-wi4591-bridge-disposition-workflow-slice1-001.md  (+9082 more)
config/: stripe_product_ids.json
dashboard/: dashboard-data.json  session-startup-report.md  session-wrapup-report.md
docs/: AGENT-RED-QUALITY-EVALUATION-UPDATE-2026-03-09.md  AGNTCY-BASELINE-VERIFICATION-REPORT.md  Agent-Red-Executive-Summary.docx  BACKLOG-NEW-WORK-ITEMS.md  COMMERCIAL-SAAS-PROPOSAL.md  COMPREHENSIVE-TEST-PLAN.md  INTEGRATION-TESTING-SETUP.md  MASTER-TEST-PLAN-1.0.md  Master-Plan-Review-01-30-2026.md  PRODUCT-FEATURES-RAG.md  PROJECT-PLAN.md  PROTECTED-BEHAVIORS.md  RAG-CONFIGURATION-MANAGEMENT-ENHANCEMENTS-PROPOSAL.md  SESSION-INIT-LINT-REMEDIATION.md  STRATEGIC-ASSESSMENT-2026-02-07.md  _temp_batch2_msgs.json  _temp_batch3_messages.txt  admin-guide.html  bootstrap.md  changelog.html  changelog.md  contributing.md  cto-evaluation.md  day-in-the-life.md  desktop-setup.md  evidence.md  generate-exec-summary.js  index.md  (+29 more)
docs-site/: .alexrc.yml  .markdown-link-check.json  .markdownlint-cli2.jsonc  .vale.ini  docusaurus.config.js  package.json  sidebars.js
examples/task-tracker/: CLAUDE.md  Dockerfile  MEMORY.md  README.md  REVIEW-EXAMPLE.md  WALKTHROUGH.md  docker-compose.yml  groundtruth.toml  pyproject.toml  seed_kb.py
examples/task-tracker/.claude/rules/: prime-builder.md
examples/task-tracker/.github/workflows/: build.yml  deploy.yml  test.yml
examples/task-tracker/src/task_tracker/: __init__.py  app.py  models.py
examples/task-tracker/tests/: test_api.py
groundtruth-kb/examples/adopter-with-transport-tests/: .gitignore  README.md  groundtruth.toml  pyproject.toml
groundtruth-kb/examples/adopter-with-transport-tests/src/transport/: __init__.py
groundtruth-kb/examples/adopter-with-transport-tests/tests/: test_transport_contract.py
(+5222 files in other folders)
