[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groundtruth-kb"
dynamic = ["version"]
description = "Specification-driven governance toolkit for AI engineering teams"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Remaker Digital", email = "dev@remakerdigital.com" },
]
keywords = ["governance", "specifications", "testing", "knowledge-base", "ai-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1",
]
bridge = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "httpx>=0.27",
]

[project.scripts]
gt = "groundtruth_kb.cli:main"

[project.urls]
Homepage = "https://github.com/Remaker-Digital/groundtruth-kb"
Repository = "https://github.com/Remaker-Digital/groundtruth-kb"
Issues = "https://github.com/Remaker-Digital/groundtruth-kb/issues"

[tool.hatch.version]
path = "src/groundtruth_kb/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/groundtruth_kb"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "groundtruth_kb/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# db.py is extracted from a proven codebase — suppress legacy style issues
"src/groundtruth_kb/db.py" = ["E501", "SIM102", "SIM105", "SIM110"]
# Bridge runtime extracted from production — suppress legacy style issues
"src/groundtruth_kb/bridge/*.py" = ["E501", "SIM102", "SIM103", "SIM105", "SIM108", "B904"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["groundtruth_kb"]
