[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groundtruth-kb"
dynamic = ["version"]
description = "Specification-driven governance toolkit for AI engineering teams"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Remaker Digital", email = "dev@remakerdigital.com" },
]
keywords = ["governance", "specifications", "testing", "knowledge-base", "ai-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1",
]
bridge = [
    "mcp>=1.0",
]
search = [
    "chromadb>=1.0.0,<2",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "httpx>=0.27",
    "interrogate>=1.7",
    "mypy==1.20.1",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
gt = "groundtruth_kb.cli:main"

[project.urls]
Homepage = "https://github.com/Remaker-Digital/groundtruth-kb"
Repository = "https://github.com/Remaker-Digital/groundtruth-kb"
Issues = "https://github.com/Remaker-Digital/groundtruth-kb/issues"

[tool.hatch.version]
path = "src/groundtruth_kb/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/groundtruth_kb"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "groundtruth_kb/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# db.py is extracted from a proven codebase — suppress legacy style issues
"src/groundtruth_kb/db.py" = ["E501", "SIM102", "SIM105", "SIM108", "SIM110"]
# Bridge runtime extracted from production — suppress legacy style issues
"src/groundtruth_kb/bridge/*.py" = ["E501", "SIM102", "SIM103", "SIM105", "SIM108", "B904"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["groundtruth_kb"]

# mypy: suppress import-not-found for optional dependencies that are not
# installed in all CI matrix jobs (chromadb is in the 'search' extra only;
# mcp is only installed when the optional mcp extra is present).
[[tool.mypy.overrides]]
module = ["chromadb", "chromadb.*", "mcp", "mcp.*"]
ignore_missing_imports = true

# mypy: in test-base (no chromadb), ignore_missing_imports causes chromadb to be
# typed as Any, making `chromadb = None` assignment valid (no [assignment] error),
# so the type: ignore[assignment] on the fallback line becomes "unused". Suppressing
# warn_unused_ignores for db.py avoids this environment-specific false positive.
# When chromadb IS installed (test-search/local), the ignore is used correctly.
[[tool.mypy.overrides]]
module = ["groundtruth_kb.db"]
warn_unused_ignores = false

# mypy: runtime.py uses the mcp decorator (@mcp.resource) which is untyped when
# mcp IS installed, but the type: ignore[misc] becomes unused when mcp is absent
# (ignore_missing_imports above makes the whole mcp namespace Any). Suppress
# warn_unused_ignores so the same comment works across both CI environments.
[[tool.mypy.overrides]]
module = ["groundtruth_kb.bridge.runtime"]
warn_unused_ignores = false
